# env-manager

./: .bumpversion.toml  .flake8  .gitignore  DESIGN.md  LICENSE  Makefile  PUBLISHING.md  README.md  env-manager.spec  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: release-drafter.yml
.github/workflows/: ci.yml  release-drafter.yml  release.yml
docs/superpowers/plans/: 2026-06-21-env-manager.md
docs/superpowers/specs/: 2026-06-22-spa-dashboard-design.md
env_manager/: __init__.py  __main__.py  exceptions.py  platform.py
env_manager/adapters/: __init__.py  base.py  loader.py  registry.py
env_manager/adapters/asdf/: __init__.py
env_manager/adapters/go/: __init__.py  goenv.py
env_manager/adapters/node/: __init__.py  fnm.py  n.py  nvm.py  volta.py
env_manager/adapters/python/: __init__.py  conda.py  pipenv.py  poetry.py  pyenv_adapter.py  uv.py  venv.py
env_manager/adapters/ruby/: __init__.py  rbenv.py  rvm.py
env_manager/adapters/rust/: __init__.py  rustup.py
env_manager/cli/: __init__.py  db_utils.py  formatters.py  main.py  resolve.py
env_manager/cli/commands/: __init__.py  cleanup_cmd.py  config.py  daemon_cmd.py  db_cmd.py  doctor_cmd.py  hook_cmd.py  info.py  lifecycle.py  list_cmd.py  pin_cmd.py  plugin.py  projects_cmd.py  runtimes_cmd.py  scan.py  snapshots_cmd.py  track_cmd.py  versions_cmd.py
env_manager/daemon/: __init__.py  scheduler.py  server.py
env_manager/daemon/api/: __init__.py  actions_api.py  cleanup_api.py  config_api.py  db_api.py  doctor_api.py  envs_api.py  health_api.py  plugins_api.py  projects_api.py  scan_api.py  snapshots_api.py  track_api.py  ws_api.py
env_manager/dashboard/: index.html  package-lock.json  package.json  vite.config.js
env_manager/dashboard/src/: App.css  App.jsx  api.js  tokens.css
env_manager/dashboard/src/components/: CleanupView.jsx  ConfigView.jsx  Dashboard.jsx  DatabaseView.jsx  DoctorView.jsx  EmptyState.jsx  EnvDetail.jsx  EnvList.jsx  LifecycleView.jsx  ProjectsView.jsx  RuntimesView.jsx  SearchInput.jsx  Sidebar.jsx  SizeBar.jsx  SnapshotsView.jsx  StatusBadge.jsx  Toast.jsx  VersionsView.jsx
env_manager/dashboard/src/components/__tests__/: EmptyState.test.jsx  SearchInput.test.jsx  SizeBar.test.jsx  StatusBadge.test.jsx
env_manager/discovery/: __init__.py  scanner.py
env_manager/models/: __init__.py  env.py  project.py  states.py  types.py
env_manager/storage/: __init__.py  database.py  repo_activity.py  repo_env.py  repo_project.py  repo_snapshot.py  schema.sql
packaging/: README.md
packaging/homebrew/: README.md  env-manager.rb
packaging/windows/: README.md  envs.nsi
scripts/: dev-setup.sh  envs.sh
testbed/: run_e2e.sh
tests/: conftest.py  test_platform.py
tests/adapters/: test_language_adapters.py
tests/adapters/python/: test_adapters.py
tests/cli/: test_cleanup.py  test_doctor.py  test_lifecycle.py  test_scan.py
tests/daemon/: test_api.py
tests/discovery/: test_scanner.py  test_scanner_persist.py
tests/models/: test_states.py
tests/storage/: test_database.py  test_repo_env.py  test_repo_project.py  test_repo_snapshot.py
