[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "env-manager"
version = "0.1.0"
description = "Cross-language virtual environment manager"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "apscheduler>=3.10.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
    "mypy>=1.10",
]

[project.scripts]
envs = "env_manager.cli.main:app"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["B008", "B904"]

[tool.ruff.lint.per-file-ignores]
"env_manager/cli/commands/lifecycle.py" = ["E501"]
"env_manager/cli/main.py" = ["E501"]
"env_manager/daemon/*.py" = ["E501"]
"env_manager/daemon/api/*.py" = ["E501"]
"env_manager/adapters/node/*.py" = ["E501"]
"env_manager/adapters/rust/*.py" = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true

[[tool.mypy.overrides]]
module = ["apscheduler.*", "apscheduler.schedulers.background"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["env_manager.daemon.*", "env_manager.daemon.api.*", "env_manager.cli.commands.lifecycle"]
disable_error_code = ["no-untyped-def", "attr-defined"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
