[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "env-manager"
version = "0.1.0"
description = "Cross-language virtual environment manager — discover, manage, health-check, snapshot, and clean up Python, Node, Ruby, Go, and Rust environments"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "env-manager contributors"}
]
keywords = ["virtualenv", "venv", "nvm", "rbenv", "environment", "dev-tools", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Systems Administration",
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "apscheduler>=3.10.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/bibekgupta3333/env-manager"
Repository = "https://github.com/bibekgupta3333/env-manager"
Issues = "https://github.com/bibekgupta3333/env-manager/issues"

[project.scripts]
envs = "env_manager.cli.main:app"

[tool.ruff]
target-version = "py310"
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["B008", "B904"]

[tool.ruff.lint.per-file-ignores]
"env_manager/**/hook_cmd.py" = ["E501"]
"env_manager/**/asdf/*.py" = ["E501"]
"env_manager/**/versions_cmd.py" = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true

[[tool.mypy.overrides]]
module = ["apscheduler.*", "apscheduler.schedulers.background"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["env_manager.daemon.*", "env_manager.daemon.api.*", "env_manager.cli.commands.lifecycle", "env_manager.cli.commands.snapshots_cmd", "env_manager.cli.commands.cleanup_cmd", "env_manager.cli.commands.doctor_cmd", "env_manager.cli.commands.hook_cmd", "env_manager.cli.commands.db_cmd"]
disable_error_code = ["no-untyped-def", "attr-defined", "no-untyped-call"]

[tool.pytest.ini_options]
testpaths = ["tests"]
